support some reportlab styles to generate pdf reports

--- a/docs/experiments/pdfreport.ipynb
+++ b/docs/experiments/pdfreport.ipynb
@@ -2,84 +2,72 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "200e72ee",
+   "execution_count": 1,
+   "id": "e4233262",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jinja2 import Template\n",
-    "import markdown\n",
-    "from weasyprint import HTML, CSS\n",
+    "from reportlab.platypus import SimpleDocTemplate, Paragraph, Spacer, PageBreak\n",
+    "from reportlab.lib.pagesizes import landscape, letter\n",
+    "from quantbullet.reporting.utils import register_fonts_from_package\n",
+    "from quantbullet.reporting import AdobeSourceFontStyles \n",
     "\n",
-    "# 1. Markdown input (content only)\n",
-    "md_content = \"\"\"\n",
-    "# Report Title\n",
-    "<!-- SUBTITLE: 20250718 -->\n",
-    "<!-- PAGEBREAK -->\n",
+    "register_fonts_from_package()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f8eb307a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Create the PDF ---\n",
+    "doc = SimpleDocTemplate(\n",
+    "    \"style_demo.pdf\",\n",
+    "    pagesize=landscape(letter),\n",
+    ")\n",
     "\n",
-    "## Section 1\n",
+    "story = []\n",
     "\n",
-    "Some more content here.\n",
-    "\"\"\"\n",
+    "# --- First Page: Title + Subtitle ---\n",
+    "story.append(Spacer(1, 200))  # push down to vertical center\n",
+    "story.append(Paragraph(\"My Demo PDF Title\", AdobeSourceFontStyles.SansTitle))\n",
+    "story.append(Paragraph(\"This is the subtitle under the title\", AdobeSourceFontStyles.SansSubtitle))\n",
     "\n",
-    "# 2. Convert Markdown → HTML fragment\n",
+    "# New page\n",
+    "story.append(PageBreak())\n",
     "\n",
-    "md_content = md_content.replace(\"<!-- PAGEBREAK -->\", \"<div style='page-break-before: always;'></div>\")\n",
-    "md_content = md_content.replace(\"<!-- SUBTITLE:\", \"<p class='subtitle'>\").replace(\"-->\", \"</p>\")\n",
-    "html_body = markdown.markdown(md_content)\n",
+    "# --- Second Page: Style showcase ---\n",
+    "story.append(Paragraph( \"This is paragraph one. This can be slightly longer so that we can test how this wraps the lines. The quick brown fox jumps over the lazy dog\", AdobeSourceFontStyles.SerifNormal))\n",
     "\n",
-    "# 3. Apply HTML template without embedded style\n",
-    "template = Template(\"\"\"\n",
-    "<html>\n",
-    "<head></head>\n",
-    "<body>{{ body }}</body>\n",
-    "</html>\n",
-    "\"\"\")\n",
-    "full_html = template.render(body=html_body)\n",
+    "story.append(Paragraph(\"This is the second paragraph, in bold.\", AdobeSourceFontStyles.SerifBold))\n",
     "\n",
-    "# 4. Define clean external CSS\n",
-    "css = CSS(string=\"\"\"\n",
-    "@page {\n",
-    "    /* size: A4; */\n",
-    "    size: 11in 8.5in;\n",
-    "    margin: 1in;\n",
-    "}\n",
-    "body {\n",
-    "    font-family: font-family: 'Aptos', 'Arial', sans-serif;\n",
-    "    line-height: 1.6;\n",
-    "    font-size: 12pt;\n",
-    "}\n",
-    "h1 {\n",
-    "    text-align: center;\n",
-    "    color: black;\n",
-    "    margin-top: 3in;\n",
-    "    font-family: 'Palatino Linotype', Palatino, serif;\n",
-    "}\n",
-    ".subtitle {\n",
-    "    text-align: center;\n",
-    "    color: black;\n",
-    "    font-family: 'Palatino Linotype', Palatino, serif;\n",
-    "}\n",
-    "h2, h3 {\n",
-    "    color: black;\n",
-    "    font-family: 'Palatino Linotype', Palatino, serif;\n",
-    "}\n",
-    "strong {\n",
-    "    font-weight: bold;\n",
-    "}\n",
-    "em {\n",
-    "    font-style: italic;\n",
-    "}\n",
-    "\"\"\")\n",
+    "story.append(Paragraph(\"This is the third paragraph, in italics.\", AdobeSourceFontStyles.SerifItalic))\n",
     "\n",
-    "# 5. Generate PDF with clean content/style separation\n",
-    "HTML(string=full_html).write_pdf(\"output.pdf\", stylesheets=[css])"
+    "story.append(Paragraph(\"This is the fourth paragraph, in code style.\", AdobeSourceFontStyles.MonoCode))\n",
+    "# Build the PDF\n",
+    "doc.build(story)\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
