more on pdf text report

--- a/docs/linear_product_model/linear_product_model_diagnostics.ipynb
+++ b/docs/linear_product_model/linear_product_model_diagnostics.ipynb
@@ -111,7 +111,7 @@
     {
      "data": {
       "text/plain": [
-       "<quantbullet.linear_product_model.regressor.LinearProductRegressorBCD at 0x1a3fb460410>"
+       "<quantbullet.linear_product_model.regressor.LinearProductRegressorBCD at 0x153321f7c10>"
       ]
      },
      "execution_count": 7,
@@ -227,7 +227,7 @@
     {
      "data": {
       "text/plain": [
-       "<quantbullet.linear_product_model.regressor.LinearProductRegressorBCD at 0x1a3be66dd90>"
+       "<quantbullet.linear_product_model.regressor.LinearProductRegressorBCD at 0x15333479b50>"
       ]
      },
      "execution_count": 12,
@@ -306,6 +306,26 @@
    ],
    "source": [
     "tk.plot_discretized_implied_errors( lprm_bcd, df, df['binary_y'], train_df, sample_frac=1, n_bins=50 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7c910419",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from quantbullet.utils.debug import object_to_pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "86bdf291",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "object_to_pickle( lprm_bcd, 'lprm_bcd.pkl' )"
    ]
   }
  ],
