--- a/docs/experiments/test-scale-method.ipynb
+++ b/docs/experiments/test-scale-method.ipynb
@@ -375,6 +375,59 @@
     "print(f\"Model Preds Mean (m on left): {np.mean( X_const @ beta_real )}\" )\n",
     "print(f\"Actual Mean: {np.mean( y )}\" )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a4842678",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "e3b60bcc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = np.random.randn( 1000, )\n",
+    "y = 2 + 5 * X + np.random.randn( 1000, ) * 0.5\n",
+    "X = X.reshape( -1, 1 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "0d82f455",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "beta = np.linalg.inv( X.T @ X ) @ X.T @ y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "13448dc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0039144134968847\n"
+     ]
+    }
+   ],
+   "source": [
+    "fitted_values = X @ beta\n",
+    "resids = y - fitted_values\n",
+    "print( np.mean( resids ) )"
+   ]
   }
  ],
  "metadata": {
@@ -393,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
