docs: Add `PdfTextReport` usage example to notebook

--- a/docs/experiments/pdfreport.ipynb
+++ b/docs/experiments/pdfreport.ipynb
@@ -79,6 +79,84 @@
     "# Build the PDF\n",
     "doc.build(story)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ca5c693",
+   "metadata": {},
+   "source": [
+    "## `PdfTextReport` Class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e15e53ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from quantbullet.reporting.pdf_text_report import PdfTextReport"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "91aef685",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "report = PdfTextReport(\"my_report.pdf\", report_title=\"My Report Title\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "002151db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [\n",
+    "    [\"Key\", \"Value\"],\n",
+    "    [\"Key1\", 123456],\n",
+    "    [\"Key2\", 7890.12],\n",
+    "    [\"Key3\", \"Some text here\"],\n",
+    "    [\"Key4\", 0.023345],\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "be381566",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "report.add_two_col_table( data, header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "ca7b5f08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(np.linspace(0,10,100), np.sin(np.linspace(0,10,100)))\n",
+    "report.add_matplotlib_figure(fig, width_fraction=0.4, dpi=300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "f9a0fdbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "report.save()"
+   ]
   }
  ],
  "metadata": {
