chore: Clean up `pdfreport.ipynb` execution counts and metadata

--- a/docs/experiments/pdfreport.ipynb
+++ b/docs/experiments/pdfreport.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "e4233262",
    "metadata": {},
    "outputs": [],
@@ -22,12 +22,12 @@
    "id": "d2181290",
    "metadata": {},
    "source": [
-    "## Basic Report"
+    "## Basic Usage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "f8eb307a",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
