update the flat ramp transformer

--- a/docs/experiments/test-scale-method.ipynb
+++ b/docs/experiments/test-scale-method.ipynb
@@ -82,7 +82,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model Preds Mean: 0.19280608782463182\n",
+      "Model Preds Mean: 0.19277486403695765\n",
       "Actual Mean: 0.2\n"
      ]
     }
@@ -91,6 +91,51 @@
     "beta = scale_X_by_m( m, X_const, binary_y )\n",
     "print( f\"Model Preds Mean: {np.mean( pred_X_by_m( m, X_const, beta ) )}\" )\n",
     "print( f\"Actual Mean: {np.mean( binary_y )}\" )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "3a2f15ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model2 Preds Mean: 0.192783233368083\n",
+      "Actual Mean: 0.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "dummy_term1 = (X_const[:, 0] < 8) * 1.0\n",
+    "dummy_term2 = (X_const[:, 0] > 11) * 1.0\n",
+    "X_const_dummy = np.hstack( [X_const, dummy_term1.reshape(-1, 1), dummy_term2.reshape(-1, 1)] )\n",
+    "beta2 = scale_X_by_m( m, X_const_dummy, binary_y )\n",
+    "print( f\"Model2 Preds Mean: {np.mean( pred_X_by_m( m, X_const_dummy, beta2 ) )}\" )\n",
+    "print( f\"Actual Mean: {np.mean( binary_y )}\" )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "63b046b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(0.022431), np.float64(0.158919))"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dummy_term1.sum() / n, dummy_term2.sum() / n"
    ]
   },
   {
@@ -111,7 +156,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model Preds Mean: 0.20801946524576606\n",
+      "Model Preds Mean: 0.20802813318138105\n",
       "Actual Mean: 0.2\n"
      ]
     }
@@ -446,7 +491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
