fix(product_model): further refactor the implied actual plots

--- a/docs/experiments/model-components-testing.ipynb
+++ b/docs/experiments/model-components-testing.ipynb
@@ -128,7 +128,7 @@
         }
       ],
       "source": [
-        "fig, axes = tk.plot_implied_actuals( model, dcontainer, sample_frac=1, n_quantile_groups=500, agg_method='weighted' )"
+        "fig, axes = tk.plot_implied_actuals( model, dcontainer, sample_frac=1, n_quantile_groups=500 )"
       ]
     },
     {
@@ -249,7 +249,7 @@
         }
       ],
       "source": [
-        "tk.plot_categorical_plots( model, dcontainer, sample_frac=1, agg_method='weighted')"
+        "tk.plot_categorical_plots( model, dcontainer, sample_frac=1 )"
       ]
     },
     {
